--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PassIT</string>
-    
+
     <string-array name="days">
         <item>PONIEDZIAŁEK</item>
         <item>WTOREK</item>
@@ -10,4 +10,6 @@
         <item>SOBOTA</item>
         <item>NIEDZIELA</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
